k8s/namespaces/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movieverse
  labels:
    name: movieverse
    purpose: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    purpose: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
    purpose: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    purpose: secrets
